--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 	 </h3>
 	 <center><a href="http://juliocampos.site/facebook?src=Facebook%7CHTML&split=5">
 	<img class="image" style="width:97%;height:21%" src="http://brasilmanchete.com/imagens/botao.png?id=4"><a></center>
-	<br>
+		 </div><br>
 		 <div class="body">
 	
 		 <h2 style="font-family:'Impact',serif">Veja agora</h3>
