--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 		 <br>
 		  <iframe style=" width: 90% !important; height: 41.8% !important;" src="https://www.youtube-nocookie.com/embed/klbpKGUHfA8?wmode=opaque&showinfo=0&autoplay=1&controls=0&modestbranding=1&rel=0&start=0" frameborder="0" allowfullscreen="allowfullscreen"></iframe>
 	<br>
-	<center><a target="_blank" href="http://mon.net.br/2074o?utm_source=Facebook|HTML1Vid|gifbutton"><img class="image" style="width:97%;height:23%" src="http://brasilmanchete.com/imagens/teste2.gif"><a></center>
+	<center><a target="_blank" href="http://mon.net.br/2074o?src=Facebook|HTML1Vid|gifbutton"><img class="image" style="width:97%;height:23%" src="http://brasilmanchete.com/imagens/teste2.gif"><a></center>
 		 
 		 <br>
 <br>		
